# win32-plugin

./: CMakeLists.txt
apprunner/: CMakeLists.txt  main.cpp
plugin/: CMakeLists.txt  plugin.cpp  plugin.h
